{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 7,
  "lineage": "61a86efe-f168-7c13-edbf-76e73a2175a6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-074bb5e3c681b0735",
            "arn": "arn:aws:ec2:us-east-1:676206925447:instance/i-01eaef89495ac7d2e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "instance-state-name",
                "values": [
                  "running"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "mediastream-api"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0037a0bd5be1dd5b4"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-01eaef89495ac7d2e",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "launch_time": "2026-05-30T14:43:43Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-090073150db79c87a",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-0-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.195",
            "public_dns": "ec2-44-201-255-226.compute-1.amazonaws.com",
            "public_ip": "44.201.255.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0075481f9213e34b7",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09901f7fd8239b344",
            "tags": {
              "Name": "mediastream-api"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e195ce032bc47640"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676206925447:vpc/vpc-0037a0bd5be1dd5b4",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0acb43156e7390ebc",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0317ec53254d1f140",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "10.0.0.0/16"
                ]
              },
              {
                "name": "isDefault",
                "values": [
                  "false"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "mediastream-vpc"
                ]
              }
            ],
            "id": "vpc-0037a0bd5be1dd5b4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0702182b674ce2369",
            "owner_id": "676206925447",
            "tags": {
              "Name": "mediastream-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:676206925447:loadbalancer/app/mediastream-alb/9a373bb81c826df1",
            "arn_suffix": "app/mediastream-alb/9a373bb81c826df1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mediastream-alb-2005370350.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:676206925447:loadbalancer/app/mediastream-alb/9a373bb81c826df1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mediastream-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c5517795f42a1814"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09901f7fd8239b344"
              },
              {
                "subnet_id": "subnet-0bde883ae87c3ed1c"
              }
            ],
            "subnets": [
              "subnet-09901f7fd8239b344",
              "subnet-0bde883ae87c3ed1c"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "mediastream-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mediastream-alb"
            },
            "vpc_id": "vpc-0037a0bd5be1dd5b4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.public",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:676206925447:listener/app/mediastream-alb/9a373bb81c826df1/62800b7aea168b1e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:676206925447:targetgroup/mediastream-api-tg/56dc5b6add78dcca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:676206925447:listener/app/mediastream-alb/9a373bb81c826df1/62800b7aea168b1e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:676206925447:loadbalancer/app/mediastream-alb/9a373bb81c826df1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.api",
            "aws_security_group.alb",
            "data.aws_subnets.public",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:676206925447:targetgroup/mediastream-api-tg/56dc5b6add78dcca",
            "arn_suffix": "targetgroup/mediastream-api-tg/56dc5b6add78dcca",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:676206925447:targetgroup/mediastream-api-tg/56dc5b6add78dcca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mediastream-api-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "mediastream-api-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mediastream-api-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0037a0bd5be1dd5b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:676206925447:targetgroup/mediastream-api-tg/56dc5b6add78dcca-20260530160037802200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:676206925447:targetgroup/mediastream-api-tg/56dc5b6add78dcca",
            "target_id": "i-01eaef89495ac7d2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb_target_group.api",
            "data.aws_instance.api",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676206925447:security-group/sg-0c5517795f42a1814",
            "description": "Allow inbound HTTP traffic to the ALB and all outbound traffic.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5517795f42a1814",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mediastream-alb-sg",
            "name_prefix": "",
            "owner_id": "676206925447",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "mediastream-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mediastream-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0037a0bd5be1dd5b4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}